objects/nDESIGN__Layout__c.object
<CustomObject>
    <fields>
        <fullName>Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Generator_Class__c</fullName>
        <description>The class that is responsible for view generation.</description>
        <label>Generator Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__lookupKey__c</fullName>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>-D Layout</label>
    <nameField>
        <label>Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Layout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>